[package]
name = "dioxus-markdown"
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/rambip/rust-web-markdown"
description = "A dynamic markdown component for the dioxus framework"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { git = "https://github.com/nikhiljha/dioxus", branch = "fix/clear-node-mapping-on-remove", package = "dioxus", features = ["signals"] }
web-framework-markdown = { version = "0.1.0", path = "../web-markdown/", default-features = false }

[features]
default = []
debug = ["web-framework-markdown/debug"]
maths = ["web-framework-markdown/maths"]
