[package]
name = "web-framework-markdown"
version = "0.1.0"
edition = "2021"
description = "An abstract API to create markdown components in any rust framework"
license = "MIT OR Apache-2.0"
repository = "https://github.com/rambip/rust-web-markdown"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
web-sys = { version = "0.3.61", features = ["MouseEvent"] }
once_cell = "1"
tree-sitter-highlight = "0.26.3"
tree-sitter = "0.26.3"
tree-sitter-rust = "0.24"
tree-sitter-bash = "0.25.1"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-javascript = "0.25.0"
tree-sitter-typescript = "0.23"
tree-sitter-java = "0.23"
tree-sitter-c = "0.24.1"
tree-sitter-cpp = "0.23"
tree-sitter-json = "0.24.8"
pulldown-cmark = "0.13.0"

[target.'cfg(target_arch = "wasm32")'.dependencies]
katex-rs = { version = "0.2", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
katex-rs = { version = "0.2", optional = true }

[features]
default = ["maths"]
debug = []
maths = ["katex-rs"]
